--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Politics Chatbot</title>
+    <title>Politics Chatbot</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js"></script>
 </head>
 <body>
     <div class="container">
-        <!-- Left Chatbot Interface -->
+        <!-- Left Panel: Chatbot -->
         <div class="left-panel">
             <h1>Discuss with Your Political Representative</h1>
             <div class="chat-window" id="chat-window">
-                <!-- Messages will appear here -->
+                <!-- Chat messages will appear here -->
             </div>
             <div class="chat-input">
                 <input type="text" id="user-input" placeholder="Type your thoughts...">
@@ -20,14 +23,14 @@
             </div>
         </div>
 
-        <!-- Right Aggregated Responses -->
+        <!-- Right Panel: Aggregated Results -->
         <div class="right-panel">
             <h1>UK Public Sentiment</h1>
             <div class="stats">
                 <p><strong>Live User Count:</strong> <span id="user-count">0</span></p>
             </div>
             <div id="bubble-container">
-                <!-- Visualized bubbles will appear here -->
+                <!-- Dynamic bubbles will appear here -->
             </div>
         </div>
     </div>
