--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politics Chatbot</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Firebase SDK -->
+    <!-- Firebase SDKs -->
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js"></script>
 </head>
@@ -14,24 +14,19 @@
         <!-- Left Panel: Chatbot -->
         <div class="left-panel">
             <h1>Discuss with Your Political Representative</h1>
-            <div class="chat-window" id="chat-window">
-                <!-- Chat messages will appear here -->
-            </div>
+            <div class="chat-window" id="chat-window"></div>
             <div class="chat-input">
                 <input type="text" id="user-input" placeholder="Type your thoughts...">
                 <button onclick="sendMessage()">Send</button>
             </div>
         </div>
-
-        <!-- Right Panel: Aggregated Results -->
+        <!-- Right Panel: Aggregated Responses -->
         <div class="right-panel">
             <h1>UK Public Sentiment</h1>
             <div class="stats">
                 <p><strong>Live User Count:</strong> <span id="user-count">0</span></p>
             </div>
-            <div id="bubble-container">
-                <!-- Dynamic bubbles will appear here -->
-            </div>
+            <div id="bubble-container"></div>
         </div>
     </div>
     <script src="script.js"></script>
