--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <div id="bubble-container"></div>
         </div>
     </div>
+    <!-- Your Script -->
     <script src="script.js"></script>
 </body>
 </html>
