--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politics Chatbot</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Load Firebase SDK -->
+    <!-- Firebase SDK Scripts -->
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js"></script>
 </head>
@@ -29,7 +29,7 @@
             <div id="bubble-container"></div>
         </div>
     </div>
-    <!-- Load Your Script -->
-    <script src="script.js" defer></script>
+    <!-- Your JavaScript File -->
+    <script src="script.js"></script>
 </body>
 </html>
