maybe not final

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politics Chatbot</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Firebase Scripts (Order Matters) -->
-    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js"></script>
+    <!-- Correct Firebase Scripts -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,7 +29,7 @@
             <div id="bubble-container"></div>
         </div>
     </div>
-    <!-- Load script.js AFTER Firebase -->
+    <!-- Load script.js LAST -->
     <script src="script.js"></script>
 </body>
 </html>
