--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politics Chatbot</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Correct Firebase Scripts -->
+    <!-- Firebase SDK: Load Correct Version -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
@@ -29,7 +29,8 @@
             <div id="bubble-container"></div>
         </div>
     </div>
-    <!-- Load script.js LAST -->
+
+    <!-- Include script.js AFTER Firebase -->
     <script src="script.js"></script>
 </body>
 </html>
