--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politics Chatbot</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Firebase SDK: Load Correct Version -->
+    <!-- Firebase Scripts -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
@@ -13,7 +13,7 @@
     <div class="container">
         <!-- Left Panel -->
         <div class="left-panel">
-            <h1>Discuss with Your Political Representative</h1>
+            <h2 id="chat-title">Chatting with Political Representative</h2> <!-- Dynamic Title -->
             <div class="chat-window" id="chat-window"></div>
             <div class="chat-input">
                 <input type="text" id="user-input" placeholder="Type your thoughts...">
@@ -29,8 +29,7 @@
             <div id="bubble-container"></div>
         </div>
     </div>
-
-    <!-- Include script.js AFTER Firebase -->
+    <!-- Include script.js -->
     <script src="script.js"></script>
 </body>
 </html>
