--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <!-- Left Panel -->
         <div class="left-panel">
-            <h2 id="chat-title">Chatting with Political Representative</h2> <!-- Dynamic Title -->
+            <h1 id="chat-title">Discuss with Your Political Representative</h1>
             <div class="chat-window" id="chat-window"></div>
             <div class="chat-input">
                 <input type="text" id="user-input" placeholder="Type your thoughts...">
